Fixed scrollbar CSS

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -8,6 +8,34 @@ html, body {
 	padding: 0;
 }
 
+::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+::-webkit-scrollbar:vertical {
+    width: 13px;
+}
+
+::-webkit-scrollbar:horizontal {
+    height: 13px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 8px;
+    border: 3px solid #fafafa;
+    background-color: rgba(0,0,0,0.2);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background:rgba(0,0,0,0.4);
+}
+
+::-webkit-scrollbar-track { 
+    background-color: #fafafa; 
+    border-radius: 8px; 
+    border-left: 1px solid #eee;
+}
+
 #app, .app {
 	overflow: hidden;
 	height: 100vh;
@@ -23,7 +51,7 @@ html, body {
 	padding-top: 43px;
 	padding-bottom: 43px;
 	overflow: hidden;
-	overflow-y: auto;
+	overflow-y: scroll;
 	will-change: opacity;
 }
 
